# container-integrity-measurement-agent

./: .gitignore  README.md
.github/: cspell.json
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: e2e-test-k8s.yaml  e2e-test.yaml  pr-check-rust.yaml  pr-golang-check.yaml  pr-pylint.yaml  publish-ccnp.yaml
container/: README.md  build.sh
container/ccnp-example/: Dockerfile
container/ccnp-example/golang-sdk-example/: go-sdk-example.go  go.mod  go.sum
container/ccnp-perf/: Dockerfile  ccnp_perf.py
container/ccnp-server/: Dockerfile
container/ccnp-webhook/: Dockerfile
container/cima-example/: Dockerfile
container/cima-perf/: Dockerfile  cima_perf.py
container/cima-server/: Dockerfile
container/cima-webhook/: Dockerfile
container/pccs/: Dockerfile  README.md
container/qgs/: Dockerfile  README.md
deployment/: README.md
deployment/docker-compose/: README.md  deploy-cima.sh  depoly-ccnp.sh  exec-ccnp-example.sh  exec-cima-example.sh  prerequisite.sh
deployment/docker-compose/configs/: ccnp-compose.yaml.template  ccnp-example.yaml.template  cima-compose.yaml.template  cima-example.yaml.template
deployment/docker-compose/scripts/: cache.sh  comm.sh  docker_compose.sh
deployment/kubernetes/: README.md
deployment/kubernetes/charts/ccnp-server/: Chart.yaml  values.yaml
deployment/kubernetes/charts/ccnp-server/templates/: NOTES.txt  _helpers.tpl  daemonset.yaml  serviceaccount.yaml
deployment/kubernetes/charts/cima-server/: Chart.yaml  values.yaml
deployment/kubernetes/charts/cima-server/templates/: NOTES.txt  _helpers.tpl  daemonset.yaml  serviceaccount.yaml
deployment/kubernetes/manifests/: ccnp-example-deployment.yaml  ccnp-example-perf-deployment.yaml  ccnp-perf-deployment.yaml  ccnp-server-deployment.yaml  ccnp-webhook-deployment.yaml  cima-example-deployment.yaml  cima-perf-deployment.yaml  cima-server-deployment.yaml  cima-webhook-deployment.yaml  namespace.yaml
deployment/kubernetes/script/: deploy-and-exec-ccnp-example.sh  deploy-ccnp-example.sh  deploy-ccnp.sh  deploy-cima-example.sh  deploy-cima.sh  exec-ccnp-example.sh  exec-cima-example.sh  image-manager.sh  prerequisite.sh
docs/: ccnp.html  ccnp.service.html  ccnp_golang_md.html  ccnp_golang_sdk.html  ccnp_python_md.html  ccnp_python_sdk.html  ccnp_rust_md.html  ccnp_rust_sdk.html  conf.py  container-measurement-design.md  deployment.html  docker_deployment.html  general_deployment.html  genindex.html  index.html  kubernetes_deployment.html  modules.html  objects.inv  py-modindex.html  sample-output-for-container-eventlog.txt  sample-output-for-container-measurement.txt  sdk.html  search.html  searchindex.js
docs/_sources/: ccnp.rst.txt  ccnp.service.rst.txt  ccnp_golang_md.rst.txt  ccnp_golang_sdk.rst.txt  ccnp_rust_sdk.rst.txt  general_deployment.rst.txt  sdk.rst.txt
docs/rst/: ccnp_python_md.rst  ccnp_python_sdk.rst  ccnp_rust_md.rst  deployment.rst  docker_deployment.rst  index.rst  kubernetes_deployment.rst  modules.rst
sdk/golang/: README.md
sdk/golang/ccnp/: client.go  go.mod  sdk.go
sdk/golang/ccnp/proto/: ccnp-server.pb.go  ccnp-server.proto  ccnp-server_grpc.pb.go
sdk/golang/cima/: client.go  go.mod  sdk.go
sdk/golang/cima/proto/: cima-server.pb.go  cima-server.proto  cima-server_grpc.pb.go
sdk/golang/example/: go-sdk-example.go  go.mod  go.sum
sdk/python3/: README.md  pyproject.toml  requirements.txt  setup.cfg
sdk/python3/ccnp/: __init__.py  ccnp_server_pb2.py  ccnp_server_pb2.pyi  ccnp_server_pb2_grpc.py  sdk.py
sdk/python3/cima/: __init__.py  cima_server_pb2.py  cima_server_pb2_grpc.py  sdk.py
sdk/python3/example/: py_sdk_example.py
sdk/python3/tests/: conftest.py  test_eventlog.py  test_measurement.py
sdk/rust/: README.MD
sdk/rust/ccnp/: Cargo.toml  build.rs
sdk/rust/ccnp/src/: ccnp_server_pb.rs  client.rs  sdk.rs
sdk/rust/cctrusted_ccnp/: Cargo.toml
sdk/rust/cctrusted_ccnp/proto/: ccnp-server.proto
sdk/rust/cctrusted_ccnp/src/: client.rs  lib.rs  sdk.rs
sdk/rust/cima/: Cargo.toml  build.rs
sdk/rust/cima/src/: cima_server_pb.rs  client.rs  sdk.rs
sdk/rust/example/: Cargo.toml
sdk/rust/example/src/: rust-sdk-example.rs
sdk/rust/sample/: Cargo.toml
sdk/rust/sample/src/: cc-sample-eventlog.rs  cc-sample-measurement.rs  cc-sample-quote.rs
service/ccnp-server/: Cargo.toml  Makefile  README.md  build.rs  deny.toml
service/ccnp-server/configs/: policy.yaml
service/ccnp-server/proto/: ccnp-server.proto
service/ccnp-server/src/: agent.rs  ccnp_server_pb.rs  container.rs  main.rs  measurement.rs  service.rs
service/ccnp-webhook/: .gitignore  PROJECT  README.md  go.mod  main.go  pod_webhook.go
service/cima-server/: Cargo.toml  Makefile  README.md  build.rs  deny.toml
service/cima-server/proto/: cima-server.proto
service/cima-server/src/: agent.rs  cima_server_pb.rs  container.rs  main.rs  measurement.rs  policy.rs  service.rs
service/cima-webhook/: PROJECT  README.md  go.mod  main.go  pod_webhook.go
service/cima-webhook/hack/: gen-certs.sh
test/ci-test/: ci-e2e-test.sh
test/ci-test/py-test/: test_ccnp.py  test_cima.py
test/e2e-test/: ci-clean.sh  ci-e2e-test.sh  ci-setup.sh
test/e2e-test/go-test/: go.mod  go.sum
test/e2e-test/go-test/test-cases/: gosdk_utils.go  rtmrs_test.go
test/e2e-test/profile/: Dockerfile  ccnp-test-node.yaml  kind-config.yaml
test/e2e-test/py-test/: pysdk_utils.py  test_rtmrs.py
test/perf/: README.md  average.sh  deploy-perf.sh  perf-para.sh  py_perf.py
tools/cvm-image-rewriter/: README.md  qemu-test.sh  run.sh  tdx-libvirt-ubuntu-host.xml.template
tools/cvm-image-rewriter/cloud-init/: user-data.basic
tools/cvm-image-rewriter/plugins/02-motd-welcome/files/etc/: motd
tools/cvm-image-rewriter/plugins/06-install-tdx-guest-kernel/: README.md
tools/cvm-image-rewriter/plugins/06-install-tdx-guest-kernel/pre-stage/: host_run.sh
tools/cvm-image-rewriter/plugins/09-ccnp-vsock-port/: README.md
tools/cvm-image-rewriter/plugins/98-ima-enable-simple/pre-stage/: guest_enable_ima_fix.sh
(+2 files in other folders)
