[project]
name = "cima"
version = "0.4.0"
authors = [
  { name="Lu, Ken", email="ken.lu@intel.com" },
  { name="Ying, Ruoyu", email="ruoyu.ying@intel.com" },
  { name="Dong, Xiaocheng", email="xiaocheng.dong@intel.com" },
]
description = "SDKs to enable confidential computing in cloud native environments"
readme = "README.md"
license = { text="Apache Software License" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "grpcio-tools>=1.56.0",
    "grpcio",
    "protobuf",
]

[project.urls]
"Homepage" = "https://github.com/cc-api/container-integrity-measurement-agent"
"Bug Tracker" = "https://github.com/cc-api/container-integrity-measurement-agent/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
markers = [
    "eventlog: marks tests for eventlog related (deselect with '-m \"not eventlog\"')",
    "measurement: marks tests for measurement related (deselect with '-m \"not measurement\"')",
]
