[metadata]
name = cima
version = 0.4.0
description = SDKs to enable confidential computing in cloud native environments
long_description = file: README.md
url = https://github.com/cc-api/container-integrity-measurement-agent
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
