[package]
name = "ccnp_server"
version = "0.3.2"
edition = "2021"

[[bin]] # Bin to run the quote server
name = "ccnp_server"
path = "src/main.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
anyhow = "1.0"
async-trait = "0.1.56"
base64 = "0.13.0"
log = "0.4.14"
clap = { version = "4.0.29", features = ["derive"] }
tonic-reflection = "0.9.2"
tonic-health = "0.9.2"
lazy_static = "1.4.0"
cctrusted_vm = { git="https://github.com/cc-api/cc-trusted-vmsdk.git", branch = "main" }
cctrusted_base = { git="https://github.com/cc-api/cc-trusted-api.git", branch = "main" }
env_logger = "0.10.1"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.30"
openssl = "0.10.63"
rand = "0.8.5"

[dev-dependencies]
serial_test = { version ="2.0.0" }
tower = { version = "0.4", features = ["util"] }

[build-dependencies]
tonic-build = "0.9"
