[package]
name = "cima"
version = "0.1.0"
edition = "2021"
authors = ["Chen Hairong <hairong.chen@intel.com>"]
repository = "https://github.com/cc-api/evidence-api"
description = "Evidence API CIMA SDK"
license = "Apache-2.0"

[lib]
name = "cima"
path = "src/lib.rs"

[dependencies]
evidence_api = { git="https://github.com/cc-api/evidence-api" }
anyhow = "1.0"
log = "0.4.20"
tonic = "0.11"
base64 = "0.13.0"
tower = { version = "0.4", features = ["util"] }
prost = "0.12"
tokio = { version = "1", features = ["full"] }
hashbrown = "0.14"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.11"
